# WatchAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  EVALUATION.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.cursor/agents/: event-logic-reviewer.md
.cursor/rules/: detection-purity.mdc  event-record-contract.mdc  poller-failure-policy.mdc  test-mocking.mdc  time-handling.mdc
.github/workflows/: ci.yml
app/: __init__.py  backfill.py  config.py  db.py  features.py  logging_config.py  main.py  models.py  open_meteo.py  poller.py  schemas.py  storage.py
app/data/: climatology.json
app/detection/: __init__.py  base.py  explain.py  forecast_bust.py  heavy_rain_burst.py  lifecycle.py  native_common.py  pressure_plunge.py  registry.py  rules.py  scoring.py  spatial_anomaly.py  spells.py  statistics.py  stress.py  (+4 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
scripts/: build_climatology.py  evaluate.py
tests/: conftest.py  labeled_scenarios.py  test_api.py  test_dedup.py  test_detection_cold_start.py  test_detection_comfort.py  test_detection_contract.py  test_detection_cross_city.py  test_detection_diurnal.py  test_detection_forecast.py  test_detection_fun_facts.py  test_detection_rapid_change.py  test_detection_sustained.py  test_detection_wmo_transition.py  test_features.py  test_forecast_storage.py  test_labeled_scenarios.py  test_lifecycle.py  test_native_detectors.py  test_open_meteo.py  test_open_meteo_archive.py  test_open_meteo_forecast.py  test_phase0_characterization.py
(+36 files in other folders)
